Adjusted descriptions of all product pages

--- a/product pages/bodybutter.html
+++ b/product pages/bodybutter.html
@@ -37,7 +37,8 @@
                     <h2>Body Butter</h2>
                     <p class="price">R389.00</p>
                     <p class="description">
-                        This luxurious hydrating serum rejuvenates your skin, leaving it soft, smooth, and radiant. Formulated with natural extracts to enhance your glow.
+                        Deep nourishment for velvety-soft skin.
+Our rich, whipped body butter melts on contact, delivering intense hydration through shea butter, cocoa butter, and sweet almond oil. Perfect for dry areas and after-shower moisture sealing.
                     </p>
                     <button class="btn-add">Add to Cart</button>
                     <!-- Ratings -->
