--- a/product pages/bodylotion.html
+++ b/product pages/bodylotion.html
@@ -37,7 +37,8 @@
                     <h2>Body Lotion</h2>
                     <p class="price">R209.00</p>
                     <p class="description">
-                        This luxurious hydrating serum rejuvenates your skin, leaving it soft, smooth, and radiant. Formulated with natural extracts to enhance your glow.
+                        Hydration that lasts all day.
+This lightweight body lotion blends aloe vera and coconut oil to replenish moisture and leave your skin delicately scented. The non-sticky texture absorbs quickly for smooth, hydrated skin that feels comfortable all day long.
                     </p>
                     <button class="btn-add">Add to Cart</button>
                     <!-- Ratings -->
