--- a/product pages/conditioner.html
+++ b/product pages/conditioner.html
@@ -37,7 +37,8 @@
                     <h2>Conditioner</h2>
                     <p class="price">R249.00</p>
                     <p class="description">
-                        This luxurious hydrating serum rejuvenates your skin, leaving it soft, smooth, and radiant. Formulated with natural extracts to enhance your glow.
+                        Smooth, soft, and deeply nourished.
+This rich conditioner detangles, hydrates, and restores shine using coconut milk and keratin extracts. Hair feels silky, resilient, and easy to manage after every wash.
                     </p>
                     <button class="btn-add">Add to Cart</button>
                     <!-- Ratings -->
