--- a/product pages/d3k3.html
+++ b/product pages/d3k3.html
@@ -37,7 +37,8 @@
                     <h2>D3 & K2</h2>
                     <p class="price">R135.00</p>
                     <p class="description">
-                        This luxurious hydrating serum rejuvenates your skin, leaving it soft, smooth, and radiant. Formulated with natural extracts to enhance your glow.
+                        Strong bones, balanced health.
+A powerful duo — D3 helps your body absorb calcium, while K2 directs it where it’s needed most: your bones. Together they support strong immunity and cardiovascular wellness.
                     </p>
                     <button class="btn-add">Add to Cart</button>
                     <!-- Ratings -->
