--- a/product pages/daycream.html
+++ b/product pages/daycream.html
@@ -37,7 +37,8 @@
                     <h2>Day Cream</h2>
                     <p class="price">R209.00</p>
                     <p class="description">
-                        This luxurious hydrating serum rejuvenates your skin, leaving it soft, smooth, and radiant. Formulated with natural extracts to enhance your glow.
+                        Light, nourishing protection for your daily glow.
+Infused with botanical extracts and natural antioxidants, our Day Cream deeply hydrates while shielding skin from everyday stressors. The lightweight texture absorbs quickly, leaving your complexion smooth, supple, and softly luminous all day long.
                     </p>
                     <button class="btn-add">Add to Cart</button>
                     <!-- Ratings -->
