--- a/product pages/exfoliator.html
+++ b/product pages/exfoliator.html
@@ -37,7 +37,8 @@
                     <h2>Exfoliator</h2>
                     <p class="price">R369.00</p>
                     <p class="description">
-                        This luxurious hydrating serum rejuvenates your skin, leaving it soft, smooth, and radiant. Formulated with natural extracts to enhance your glow.
+                        Smooth, refine, and renew.
+Our gentle exfoliator uses fine natural particles and fruit enzymes to buff away dead skin cells, revealing a radiant, soft surface. With soothing aloe and chamomile, it’s perfect for weekly renewal without irritation.
                     </p>
                     <button class="btn-add">Add to Cart</button>
                     <!-- Ratings -->
