--- a/product pages/facecleanser.html
+++ b/product pages/facecleanser.html
@@ -37,7 +37,8 @@
                     <h2>Face Cleanser</h2>
                     <p class="price">R109.00</p>
                     <p class="description">
-                        This luxurious hydrating serum rejuvenates your skin, leaving it soft, smooth, and radiant. Formulated with natural extracts to enhance your glow.
+                        Gentle cleansing, naturally pure.
+Crafted with shea butter and tea tree oil, our Face Soap Bar purifies without stripping away moisture. It removes dirt, oil, and impurities while maintaining your skin’s natural balance. Suitable for all skin types, including sensitive skin.
                     </p>
                     <button class="btn-add">Add to Cart</button>
                     <!-- Ratings -->
