--- a/product pages/facemask.html
+++ b/product pages/facemask.html
@@ -37,7 +37,8 @@
                     <h2>Face Mask</h2>
                     <p class="price">R169.00</p>
                     <p class="description">
-                        This luxurious hydrating serum rejuvenates your skin, leaving it soft, smooth, and radiant. Formulated with natural extracts to enhance your glow.
+                        Instant revival for tired, dull skin.
+This creamy clay mask detoxifies and recharges your complexion using mineral-rich kaolin and green tea extract. It draws out impurities, tightens pores, and leaves skin visibly brighter and refreshed after just one use.
                     </p>
                     <button class="btn-add">Add to Cart</button>
                     <!-- Ratings -->
