--- a/product pages/handcream.html
+++ b/product pages/handcream.html
@@ -37,7 +37,8 @@
                     <h2>Hand Cream</h2>
                     <p class="price">R119.00</p>
                     <p class="description">
-                        This luxurious hydrating serum rejuvenates your skin, leaving it soft, smooth, and radiant. Formulated with natural extracts to enhance your glow.
+                        Soft, hydrated hands that feel cared for.
+Enriched with shea butter, vitamin E, and jojoba oil, this fast-absorbing hand cream restores moisture and protects against dryness. It leaves no greasy residue — just silky, nourished skin.
                     </p>
                     <button class="btn-add">Add to Cart</button>
                     <!-- Ratings -->
