--- a/product pages/iron.html
+++ b/product pages/iron.html
@@ -37,7 +37,8 @@
                     <h2>Iron</h2>
                     <p class="price">R135.00</p>
                     <p class="description">
-                        This luxurious hydrating serum rejuvenates your skin, leaving it soft, smooth, and radiant. Formulated with natural extracts to enhance your glow.
+                        Support vitality and natural energy.
+Our Iron supplement helps combat fatigue and supports healthy red blood cell formation. Fortified with vitamin C for optimal absorption, it’s the perfect daily boost for strength and focus.
                     </p>
                     <button class="btn-add">Add to Cart</button>
                     <!-- Ratings -->
