--- a/product pages/nightcream.html
+++ b/product pages/nightcream.html
@@ -37,7 +37,8 @@
                     <h2>Night Cream</h2>
                     <p class="price">R209.00</p>
                     <p class="description">
-                        This luxurious hydrating serum rejuvenates your skin, leaving it soft, smooth, and radiant. Formulated with natural extracts to enhance your glow.
+                        Wake up to refreshed, renewed skin.
+This restorative night cream works while you rest, blending plant oils, peptides, and vitamin E to encourage overnight cell repair. Skin feels firm, replenished, and deeply moisturized by morning — revealing a youthful, rested glow.
                     </p>
                     <button class="btn-add">Add to Cart</button>
                     <!-- Ratings -->
