--- a/product pages/shakevanilla.html
+++ b/product pages/shakevanilla.html
@@ -37,7 +37,8 @@
                     <h2>Lifestyle Shake Vanilla</h2>
                     <p class="price">R629.00</p>
                     <p class="description">
-                        This luxurious hydrating serum rejuvenates your skin, leaving it soft, smooth, and radiant. Formulated with natural extracts to enhance your glow.
+                        Balanced nutrition made simple.
+Packed with plant-based protein, vitamins, and essential minerals, our Meal Replacement Shakes offer a convenient way to fuel your body. Ideal for busy mornings or post-workout recovery, they help you stay full, energized, and nourished — naturally.
                     </p>
                     <button class="btn-add">Add to Cart</button>
                     <!-- Ratings -->
