--- a/product pages/shampoo.html
+++ b/product pages/shampoo.html
@@ -37,7 +37,8 @@
                     <h2>Shampoo</h2>
                     <p class="price">R249.00</p>
                     <p class="description">
-                        This luxurious hydrating serum rejuvenates your skin, leaving it soft, smooth, and radiant. Formulated with natural extracts to enhance your glow.
+                        Cleanse and strengthen from root to tip.
+Our botanical shampoo removes buildup while nourishing your scalp with biotin, rosemary, and argan oil. It promotes healthy hair growth and leaves your hair fresh, light, and glossy.
                     </p>
                     <button class="btn-add">Add to Cart</button>
                     <!-- Ratings -->
