--- a/product pages/showergel.html
+++ b/product pages/showergel.html
@@ -37,7 +37,8 @@
                     <h2>Shower Gel</h2>
                     <p class="price">R269.00</p>
                     <p class="description">
-                        This luxurious hydrating serum rejuvenates your skin, leaving it soft, smooth, and radiant. Formulated with natural extracts to enhance your glow.
+                        A refreshing cleanse for body and mind.
+Infused with botanical extracts and natural essential oils, this sulfate-free shower gel gently cleanses while maintaining your skin’s natural moisture. The rich lather and uplifting fragrance turn your daily shower into a self-care ritual.
                     </p>
                     <button class="btn-add">Add to Cart</button>
                     <!-- Ratings -->
