--- a/product pages/vitaminc.html
+++ b/product pages/vitaminc.html
@@ -37,7 +37,8 @@
                     <h2>Vitamin C</h2>
                     <p class="price">R135.00</p>
                     <p class="description">
-                        This luxurious hydrating serum rejuvenates your skin, leaving it soft, smooth, and radiant. Formulated with natural extracts to enhance your glow.
+                        Immunity and glow, inside and out.
+Formulated with high-potency vitamin C, this antioxidant powerhouse helps defend against free radicals, supports immune health, and enhances collagen production for glowing skin.
                     </p>
                     <button class="btn-add">Add to Cart</button>
                     <!-- Ratings -->
