--- a/product pages/zinc.html
+++ b/product pages/zinc.html
@@ -37,7 +37,8 @@
                     <h2>Zinc</h2>
                     <p class="price">R135.00</p>
                     <p class="description">
-                        This luxurious hydrating serum rejuvenates your skin, leaving it soft, smooth, and radiant. Formulated with natural extracts to enhance your glow.
+                        Essential support for skin, immunity, and healing.
+Zinc is vital for a healthy immune response and skin regeneration. Our easy-to-absorb formula promotes cell repair, hormone balance, and everyday wellness.
                     </p>
                     <button class="btn-add">Add to Cart</button>
                     <!-- Ratings -->
