reviews for all product pages have been adjusted

--- a/product pages/bodylotion.html
+++ b/product pages/bodylotion.html
@@ -50,11 +50,11 @@ This lightweight body lotion blends aloe vera and coconut oil to replenish moist
                     <div class="reviews">
                         <div class="review">
                             <strong>Jane D.</strong>
-                            <p>Love this serum! My skin feels amazing.</p>
+                            <p>The scent is subtle and fresh. My skin feels moisturized without feeling sticky.</p>
                         </div>
                         <div class="review">
                             <strong>Emma R.</strong>
-                            <p>Really hydrating, absorbs quickly, highly recommend.</p>
+                            <p>Great daily lotion. Keeps my skin glowing and comfortable.</p>
                         </div>
                     </div>
                 </div>
