--- a/product pages/conditioner.html
+++ b/product pages/conditioner.html
@@ -50,11 +50,11 @@ This rich conditioner detangles, hydrates, and restores shine using coconut milk
                     <div class="reviews">
                         <div class="review">
                             <strong>Jane D.</strong>
-                            <p>Love this serum! My skin feels amazing.</p>
+                            <p>Detangles beautifully and leaves my hair silky after one wash.</p>
                         </div>
                         <div class="review">
                             <strong>Emma R.</strong>
-                            <p>Really hydrating, absorbs quickly, highly recommend.</p>
+                            <p>I use it after the shampoo — my hair feels nourished and smells amazing.</p>
                         </div>
                     </div>
                 </div>
