--- a/product pages/d3k3.html
+++ b/product pages/d3k3.html
@@ -50,11 +50,11 @@ A powerful duo — D3 helps your body absorb calcium, while K2 directs it where 
                     <div class="reviews">
                         <div class="review">
                             <strong>Jane D.</strong>
-                            <p>Love this serum! My skin feels amazing.</p>
+                            <p>I love that it supports both bones and immunity. Easy to take, no aftertaste.</p>
                         </div>
                         <div class="review">
                             <strong>Emma R.</strong>
-                            <p>Really hydrating, absorbs quickly, highly recommend.</p>
+                            <p>I feel more energetic and my nails are stronger. Great supplement!</p>
                         </div>
                     </div>
                 </div>
