--- a/product pages/facecleanser.html
+++ b/product pages/facecleanser.html
@@ -50,11 +50,11 @@ Crafted with shea butter and tea tree oil, our Face Soap Bar purifies without st
                     <div class="reviews">
                         <div class="review">
                             <strong>Jane D.</strong>
-                            <p>Love this serum! My skin feels amazing.</p>
+                            <p>Doesn’t dry my skin at all. It leaves my face clean and fresh after every wash.</p>
                         </div>
                         <div class="review">
                             <strong>Emma R.</strong>
-                            <p>Really hydrating, absorbs quickly, highly recommend.</p>
+                            <p>I’ve been using it for two weeks and my skin feels balanced and calm.</p>
                         </div>
                     </div>
                 </div>
