--- a/product pages/facemask.html
+++ b/product pages/facemask.html
@@ -50,11 +50,11 @@ This creamy clay mask detoxifies and recharges your complexion using mineral-ric
                     <div class="reviews">
                         <div class="review">
                             <strong>Jane D.</strong>
-                            <p>Love this serum! My skin feels amazing.</p>
+                            <p>My skin looks brighter immediately after using it. Love the natural scent.</p>
                         </div>
                         <div class="review">
                             <strong>Emma R.</strong>
-                            <p>Really hydrating, absorbs quickly, highly recommend.</p>
+                            <p>Helps clear my pores without irritation — perfect for my weekly routine.</p>
                         </div>
                     </div>
                 </div>
