--- a/product pages/handcream.html
+++ b/product pages/handcream.html
@@ -50,11 +50,11 @@ Enriched with shea butter, vitamin E, and jojoba oil, this fast-absorbing hand c
                     <div class="reviews">
                         <div class="review">
                             <strong>Jane D.</strong>
-                            <p>Love this serum! My skin feels amazing.</p>
+                            <p>It absorbs so quickly and smells divine. My hands stay soft all day.</p>
                         </div>
                         <div class="review">
                             <strong>Emma R.</strong>
-                            <p>Really hydrating, absorbs quickly, highly recommend.</p>
+                            <p>Keeps my hands hydrated even after washing. Perfect for my handbag.</p>
                         </div>
                     </div>
                 </div>
