--- a/product pages/nightcream.html
+++ b/product pages/nightcream.html
@@ -50,11 +50,11 @@ This restorative night cream works while you rest, blending plant oils, peptides
                     <div class="reviews">
                         <div class="review">
                             <strong>Jane D.</strong>
-                            <p>Love this cream! My skin feels amazing.</p>
+                            <p>My skin feels so smooth every morning. It’s become my favorite night ritual!</p>
                         </div>
                         <div class="review">
                             <strong>Emma R.</strong>
-                            <p>Really hydrating, absorbs quickly, highly recommend.</p>
+                            <p>A little goes a long way. Keeps my skin moisturized through the night.</p>
                         </div>
                     </div>
                 </div>
