--- a/product pages/shampoo.html
+++ b/product pages/shampoo.html
@@ -50,11 +50,11 @@ Our botanical shampoo removes buildup while nourishing your scalp with biotin, r
                     <div class="reviews">
                         <div class="review">
                             <strong>Jane D.</strong>
-                            <p>Love this serum! My skin feels amazing.</p>
+                            <p>Cleans gently without drying. My scalp feels balanced and healthy.</p>
                         </div>
                         <div class="review">
                             <strong>Emma R.</strong>
-                            <p>Really hydrating, absorbs quickly, highly recommend.</p>
+                            <p>I’ve noticed less frizz and my hair feels lighter.</p>
                         </div>
                     </div>
                 </div>
