--- a/product pages/showergel.html
+++ b/product pages/showergel.html
@@ -50,11 +50,11 @@ Infused with botanical extracts and natural essential oils, this sulfate-free sh
                     <div class="reviews">
                         <div class="review">
                             <strong>Jane D.</strong>
-                            <p>Love this serum! My skin feels amazing.</p>
+                            <p>My bathroom smells like a spa after I use this. Leaves my skin soft and clean.</p>
                         </div>
                         <div class="review">
                             <strong>Emma R.</strong>
-                            <p>Really hydrating, absorbs quickly, highly recommend.</p>
+                            <p>Doesn’t strip my skin — just feels clean and revitalizing.</p>
                         </div>
                     </div>
                 </div>
