--- a/product pages/zinc.html
+++ b/product pages/zinc.html
@@ -50,11 +50,11 @@ Zinc is vital for a healthy immune response and skin regeneration. Our easy-to-a
                     <div class="reviews">
                         <div class="review">
                             <strong>Jane D.</strong>
-                            <p>Love this serum! My skin feels amazing.</p>
+                            <p>Since I started taking this, my breakouts reduced a lot. Highly recommend!</p>
                         </div>
                         <div class="review">
                             <strong>Emma R.</strong>
-                            <p>Really hydrating, absorbs quickly, highly recommend.</p>
+                            <p>I take it daily and feel healthier overall.</p>
                         </div>
                     </div>
                 </div>
