--- a/product pages/bodybutter.html
+++ b/product pages/bodybutter.html
@@ -50,11 +50,11 @@ Our rich, whipped body butter melts on contact, delivering intense hydration thr
                     <div class="reviews">
                         <div class="review">
                             <strong>Jane D.</strong>
-                            <p>Love this serum! My skin feels amazing.</p>
+                            <p>I use it after a shower and my skin stays silky until the next day.</p>
                         </div>
                         <div class="review">
                             <strong>Emma R.</strong>
-                            <p>Really hydrating, absorbs quickly, highly recommend.</p>
+                            <p>A little goes a long way! Perfect for dry elbows and knees.</p>
                         </div>
                     </div>
                 </div>
