--- a/product pages/daycream.html
+++ b/product pages/daycream.html
@@ -6,14 +6,22 @@
         <title>Nature's Veil | Day Cream</title>
         <link rel="stylesheet" href="../css/style.css">
         <script src="https://kit.fontawesome.com/a2e0e9d6a8.js" crossorigin="anonymous"></script>
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+        <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
+            integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
+            crossorigin="anonymous"
+            referrerpolicy="no-referrer"
+        >
     </head>
     <body>
         <!-- Navbar -->
         <header class="navbar">
             <div class="container nav-container">
-                <img class="logo" src="../images/logo/Modern_Wordmark_Logo_for_Nature_s_Veil__Design_2_-removebg-preview.png" alt="Nature's Veil Logo Image"/>
-                <div class="menu-toggle"><i class="fa-solid fa-bars"></i></div>
+                <img class="logo" src="../images/logo/Modern_Wordmark_Logo_for_Nature_s_Veil__Design_2_-removebg-preview.png" alt="Nature's Veil Logo Image">
+                <div class="menu-toggle">
+                    <i class="fa-solid fa-bars"></i>
+                </div>
                 <nav class="nav-links">
                     <a href="../index.html">Home</a>
                     <a href="../shop.html">Shop</a>
@@ -50,11 +58,11 @@ Infused with botanical extracts and natural antioxidants, our Day Cream deeply h
                     <div class="reviews">
                         <div class="review">
                             <strong>Jane D.</strong>
-                            <p>Love this cream! My skin feels amazing.</p>
+                            <p>Lightweight but super hydrating. I use it under makeup and it gives me a healthy glow.</p>
                         </div>
                         <div class="review">
                             <strong>Emma R.</strong>
-                            <p>Really hydrating, absorbs quickly, highly recommend.</p>
+                            <p>Absorbs fast and smells amazing. My skin doesn’t get oily anymore during the day.</p>
                         </div>
                     </div>
                 </div>
@@ -128,6 +136,6 @@ Infused with botanical extracts and natural antioxidants, our Day Cream deeply h
                 </section>
             </footer>
             <script src="../js/shop.js"></script>
-        <script src="../js/main.js"></script>
+            <script src="../js/main.js"></script>
         </body>
     </html>
