--- a/product pages/exfoliator.html
+++ b/product pages/exfoliator.html
@@ -50,11 +50,11 @@ Our gentle exfoliator uses fine natural particles and fruit enzymes to buff away
                     <div class="reviews">
                         <div class="review">
                             <strong>Jane D.</strong>
-                            <p>Love this serum! My skin feels amazing.</p>
+                            <p>It gently polishes my skin and makes it feel baby-soft. A must-have!</p>
                         </div>
                         <div class="review">
                             <strong>Emma R.</strong>
-                            <p>Really hydrating, absorbs quickly, highly recommend.</p>
+                            <p>Removes dullness without feeling harsh. My skin tone looks more even.</p>
                         </div>
                     </div>
                 </div>
