--- a/product pages/iron.html
+++ b/product pages/iron.html
@@ -50,11 +50,11 @@ Our Iron supplement helps combat fatigue and supports healthy red blood cell for
                     <div class="reviews">
                         <div class="review">
                             <strong>Jane D.</strong>
-                            <p>Love this serum! My skin feels amazing.</p>
+                            <p>No more mid-day fatigue! Gentle on the stomach too.</p>
                         </div>
                         <div class="review">
                             <strong>Emma R.</strong>
-                            <p>Really hydrating, absorbs quickly, highly recommend.</p>
+                            <p>My energy levels improved within a week. Great daily supplement.</p>
                         </div>
                     </div>
                 </div>
