--- a/product pages/shakevanilla.html
+++ b/product pages/shakevanilla.html
@@ -50,11 +50,11 @@ Packed with plant-based protein, vitamins, and essential minerals, our Meal Repl
                     <div class="reviews">
                         <div class="review">
                             <strong>Jane D.</strong>
-                            <p>Love this serum! My skin feels amazing.</p>
+                            <p>Perfect for busy mornings. I stay full for hours without feeling heavy.</p>
                         </div>
                         <div class="review">
                             <strong>Emma R.</strong>
-                            <p>Really hydrating, absorbs quickly, highly recommend.</p>
+                            <p>Smooth texture and not too sweet. Great after workouts.</p>
                         </div>
                     </div>
                 </div>
