--- a/product pages/vitaminc.html
+++ b/product pages/vitaminc.html
@@ -50,11 +50,11 @@ Formulated with high-potency vitamin C, this antioxidant powerhouse helps defend
                     <div class="reviews">
                         <div class="review">
                             <strong>Jane D.</strong>
-                            <p>Love this serum! My skin feels amazing.</p>
+                            <p>I haven’t been sick all winter. My skin also looks brighter!</p>
                         </div>
                         <div class="review">
                             <strong>Emma R.</strong>
-                            <p>Really hydrating, absorbs quickly, highly recommend.</p>
+                            <p>Great value and noticeable results. My skin feels rejuvenated.</p>
                         </div>
                     </div>
                 </div>
