added terms.html with content

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                     <br>
                     <a href="">The Consumer Protection Act</a>
                     <br>
-                    <a href="">T & C</a>
+                    <a href="terms.html">T & C</a>
                     <br>
                     <a href="">Contact Us</a>
                 </div>
@@ -96,15 +96,9 @@
                 </div>
                 <div class="footer-box">
                     <h3>My Account</h3>
-                    <a href="">My Account</a>
+                    <a href="account.html">My Account</a>
                     <br>
-                    <a href="">Orders</a>
-                    <br>
-                    <a href="">Addresses</a>
-                    <br>
-                    <a href="">Shopping cart</a>
-                    <br>
-                    <a href="">Wishlist</a>
+                    <a href="cart.html">Shopping cart</a>
                 </div>
             </section>
             <section class="footer-end">
