Added shiping.html and added content

--- a/shipping.html
+++ b/shipping.html
@@ -37,42 +37,26 @@
             </div>
         </header>
         <main>
-            <!--Main Content-->
-            <section class="hero">
-                <img src="images/hero/hero banner.png" alt="">
-                <div class="hero-overlay">
-                    <h2>Where Beauty Blossoms</h2>
-                    <p>Discover premium skin care that brings out your natural glow.</p>
-                    <a href="shop.html" class="btn-primary">Shop Now</a>
-                </div>
-            </section>
-            <section class="featured">
-                <h2>Featured Products</h2>
-                <div class="product-grid">
-                    <div class="product-card">
-                        <a href="product pages/bodylotion.html?product=bodylotion">
-                            <img src="images/products/Nature's Veil Body Lotion.png" alt="Body Lotion Image">
-                            <h3>Body Lotion</h3>
-                            <p>R209.00</p>
-                        </a>
-                        <button class="btn-add">Add to Cart</button>
-                    </div>
-                    <div class="product-card">
-                        <a href="product pages/shakevanilla.html?product=shakevanilla">
-                            <img src="images/products/Nature's Veil Shake Vanilla.png" alt="Shake Vanilla Image">
-                            <h3>Lifestyle Shake Vanilla</h3>
-                            <p>R629.00</p>
-                        </a>
-                        <button class="btn-add">Add to Cart</button>
-                    </div>
-                    <div class="product-card">
-                        <a href="product pages/daycream.html?product=daycream">
-                            <img src="images/products/Nature's Veil Day cream.png" alt="Day Cream Image">
-                            <h3>Day Cream</h3>
-                            <p>R209.00</p>
-                        </a>
-                        <button class="btn-add">Add to Cart</button>
-                    </div>
+            <section>
+                <div class="shipping">
+                    <h3>South Africa</h3>
+                    <p>Nature’s Veil will charge a flat rate of <strong>R83</strong> as from 1 May for all parcels. This excludes deliveries to outlying areas, special deliveries to farms or delivery addresses on gravel roads. Deliveries to these areas will not be possible on the store and a PEP/PostNet option needs to be selected.</p>
+                    <ul>
+                        <li>PEP/ PostNet store delivery is <strong>R69</strong></li>
+                        <li>Orders of R6 000+ will qualify for free delivery</li>
+                    </ul>
+                    <h3>Namibia</h3>
+                    <ul>
+                        <li>Windhoek delivery is <strong>R 60</strong></li>
+                        <li>Namibia (Outside Windhoek) = <strong>R 132</strong></li>
+                        <li>Orders of R6 000+ will qualify for free delivery</li>
+                    </ul>
+                    <p>Delivery takes 2-3 working days to main centres and 4-5 working days to regional centres and outlying areas.
+                        <br>
+                        Delivery takes 4-5 working days for PEP Store delivery.
+                        <br>
+                        Delivery takes 2-3 working days for PostNet store deliveries to main centres and 3-5 working days for PostNet deliveries to regional centres.
+                    </p>
                 </div>
             </section>
         </main>
@@ -80,7 +64,7 @@
             <section class="footer-container">
                 <div class="footer-box border">
                     <h3>Information</h3>
-                    <a href="shipping.html">Shipping</a>
+                    <a href="">Shipping</a>
                     <br>
                     <a href="">The Consumer Protection Act</a>
                     <br>
@@ -115,3 +99,4 @@
         <script src="js/main.js"></script>
     </body>
 </html>
+    
