added a hero banner to terms and shipping pages

--- a/shipping.html
+++ b/shipping.html
@@ -37,6 +37,12 @@
             </div>
         </header>
         <main>
+            <section class="shipping-hero">
+                <img src="images/hero/Bold Sale Brand Website Homepage Banner.png" alt="color background with leaf">
+                <div class="shipping-overlay">
+                    <h1>Shipping</h1>
+                </div>
+            </section>
             <section>
                 <div class="shipping">
                     <h3>South Africa</h3>
