--- a/terms.html
+++ b/terms.html
@@ -37,6 +37,12 @@
             </div>
         </header>
         <main>
+            <section class="terms-hero">
+                <img src="images/hero/Bold Sale Brand Website Homepage Banner.png" alt="color background with leaf">
+                <div class="terms-overlay">
+                    <h1>T & C</h1>
+                </div>
+            </section>
             <section>
                 <div class="terms">
                     <p>This website is operated by Nature’s Veil. Throughout the site, the terms “we”, “us” and “our” refer to Nature’s Veil.
