adjustd some styling and created contact.html with styling

--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
         <meta name="description" content="Nature’s Veil — where natural elegance meets modern skincare. Explore our products and shop your favourites online.">
         <meta name="keywords" content="beauty, cosmetics, skincare, haircare, Pure Bloom, makeup, online store">
         <meta name="author" content="Bernadette Brits">
-        <title>Nature's Veil | Home</title>
+        <title>Nature's Veil | Contact Us</title>
         <link rel="stylesheet" href="css/style.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -37,42 +37,31 @@
             </div>
         </header>
         <main>
-            <!--Main Content-->
-            <section class="hero">
-                <img src="images/hero/hero banner.png" alt="">
-                <div class="hero-overlay">
-                    <h2>Where Beauty Blossoms</h2>
-                    <p>Discover premium skin care that brings out your natural glow.</p>
-                    <a href="shop.html" class="btn-primary">Shop Now</a>
+            <section class="contact-hero">
+                <img src="images/hero/Bold Sale Brand Website Homepage Banner.png" alt="color background with leaf">
+                <div class="contact-overlay">
+                    <h1>Contact Us</h1>
                 </div>
             </section>
-            <section class="featured">
-                <h2>Featured Products</h2>
-                <div class="product-grid">
-                    <div class="product-card">
-                        <a href="product pages/bodylotion.html?product=bodylotion">
-                            <img src="images/products/Nature's Veil Body Lotion.png" alt="Body Lotion Image">
-                            <h3>Body Lotion</h3>
-                            <p>R209.00</p>
-                        </a>
-                        <button class="btn-add">Add to Cart</button>
-                    </div>
-                    <div class="product-card">
-                        <a href="product pages/shakevanilla.html?product=shakevanilla">
-                            <img src="images/products/Nature's Veil Shake Vanilla.png" alt="Shake Vanilla Image">
-                            <h3>Lifestyle Shake Vanilla</h3>
-                            <p>R629.00</p>
-                        </a>
-                        <button class="btn-add">Add to Cart</button>
-                    </div>
-                    <div class="product-card">
-                        <a href="product pages/daycream.html?product=daycream">
-                            <img src="images/products/Nature's Veil Day cream.png" alt="Day Cream Image">
-                            <h3>Day Cream</h3>
-                            <p>R209.00</p>
-                        </a>
-                        <button class="btn-add">Add to Cart</button>
-                    </div>
+            <section class="info">
+                <div class="contact-info">
+                    <p>Phone: +27 (0)21 345 7789</p>
+                    <p>Monday-Thursday: 8.00 - 16:30</p>
+                    <p>Friday: 8.00 - 16:00</p>
+                    <p>23 Olivewood Avenue<br>Durbanville,<br>Cape Town<br>Western Cape,<br>7550<br>South Africa</p>
+                    <p>support@naturesveil.co.za</p>
+                </div>
+            
+                <div class="contact-info">
+                    <form method="post" action="">
+                        <legend for="name">Your Name</legend>
+                        <input type="text" name="name" id="name">
+                        <legend for="email">Your Email</legend>
+                        <input type="email" name="email" id="email">
+                        <legend for="message">Message</legend>
+                        <textarea type="textarea" name="message" id="message"></textarea><br>
+                        <button class="btn-primary" type="submit">Send</button>
+                    </form>
                 </div>
             </section>
         </main>
@@ -80,11 +69,19 @@
             <section class="footer-container">
                 <div class="footer-box border">
                     <h3>Information</h3>
-                    <a href="shipping.html">Shipping</a>
+                    <a href="">Shipping</a>
                     <br>
-                    <a href="terms.html">T & C</a>
+                    <a href="">The Consumer Protection Act</a>
                     <br>
-                    <a href="contact.html">Contact Us</a>
+                    <a href="">T & C</a>
+                    <br>
+                    <a href="">Contact Us</a>
+                </div>
+                <div class="footer-box border">
+                    <h3>Customer Service</h3>
+                    <a href="">Search</a>
+                    <br>
+                    <a href="">Recently viewed</a>
                 </div>
                 <div class="footer-box">
                     <h3>My Account</h3>
@@ -94,10 +91,10 @@
                 </div>
             </section>
             <section class="footer-end">
-                <a href="href="https://www.facebook.com/naturesveilsa" target="_blank"">
+                <a href="">
                     <i class="fa-brands fa-facebook"></i>
                 </a>
-                <a href="href="https://www.instagram.com/naturesveilsa" target="_blank"">
+                <a href="">
                     <i class="fa-brands fa-instagram"></i>
                 </a>
                 <p>Copyright &copy; 2025 Nature’s Veil. All rights reserved.</p>
@@ -106,4 +103,4 @@
         <script src="js/shop.js"></script>
         <script src="js/main.js"></script>
     </body>
-</html>
+</html>        
