--- a/shipping.html
+++ b/shipping.html
@@ -5,7 +5,7 @@
         <meta name="description" content="Nature’s Veil — where natural elegance meets modern skincare. Explore our products and shop your favourites online.">
         <meta name="keywords" content="beauty, cosmetics, skincare, haircare, Pure Bloom, makeup, online store">
         <meta name="author" content="Bernadette Brits">
-        <title>Nature's Veil | Home</title>
+        <title>Nature's Veil | Shipping</title>
         <link rel="stylesheet" href="css/style.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
